--- a/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
@@ -27,6 +27,7 @@
 						  [isEdit]="false"
 						  [isContactIcon]="false"
 						  [isResume]="true"
+						  [isMatchesShow]="true"
 						  [isMultipleMatches]="isMultipleMatches"
 						  [isMatchesView]="false">
 						</app-contact-card>
@@ -86,7 +87,7 @@
 										[moreElement]="moreElement" [userInfo]="userInfo">
 										</app-shared-job-profile-multiple-matches>
 									</div>
-									<div class="col-lg-12 info" style="text-align:end;">
+									<div class="col-lg-12 info" style="text-align:end;" *ngIf=" matchingJob?.jobs?.status ==1">
 										<button (click)="onToggleSendMail(true, matchingJob?.jobs)" type="button" class="btn btn-outline-orange ml-auto"  style="bottom: 15px; right: 15px;"> <i
 												class="fas fa-paper-plane"></i> {{"dashboard.sendMail" | translate}}</button>
 									</div>
@@ -160,7 +161,7 @@
 										[moreElement]="moreElement" [userInfo]="userInfo">
 										</app-shared-job-profile-multiple-matches>
 									</div>
-									<div class="col-lg-12 info" style="text-align:end;">
+									<div class="col-lg-12 info" style="text-align:end;"  *ngIf=" matchingJobNew?.jobs?.status ==1" >
 										<button (click)="onToggleSendMail(true, matchingJobNew?.jobs)" type="button" class="btn btn-outline-orange ml-auto"  style="bottom: 15px; right: 15px;"> <i
 												class="fas fa-paper-plane"></i> {{"dashboard.sendMail" | translate}}</button>
 									</div>
