--- a/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.css
+++ b/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.css
@@ -42,6 +42,24 @@
 .pj-title  h6{
 	display: contents !important;
 }
+.pj-titler {
+        padding: 10px 0;
+    border-bottom: 1px solid #ffc0d8;
+}
+.pj-titler h6 {
+    margin: 0;
+    font-weight: 900;
+    font-size: 0.7rem;
+    text-transform: uppercase;
+    line-height: 0.6;
+}
+.pj-titler h6 {
+    border: none !important;
+    outline: none !important;
+}
+.pj-titler h6 {
+    display: contents !important;
+}
 .pj-titles{
     padding: 5px 0;
     /*border-bottom: 1px solid #ffc0d8;*/
