--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -3,15 +3,17 @@
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label>{{"postJob.totalYearsOfExperience" | translate }}(Min)</label>
-				<input appMarkAsterisk numbersOnly formControlName="experience" type="text" class="form-control w-25 text-center" value="8+">
+				<input  (ngModelChange)="keyPress()"  appMarkAsterisk numbersOnly formControlName="experience" type="text" class="form-control w-25 text-center" value="8+">
 				<app-control-messages [control]="f['experience']"></app-control-messages>
+				<small *ngIf="totalExpError"  class="text-danger">Total is greater than SAP Experience</small>
 			</div>
 		</div>
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label>{{"postJob.totalYearsOfSapExperience" | translate }}(Min)</label>
-				<input appMarkAsterisk numbersOnly formControlName="sap_experience" type="text" class="form-control w-25 text-center" value="5+">
+				<input  (ngModelChange)="keyPress()"  appMarkAsterisk numbersOnly formControlName="sap_experience" type="text" class="form-control w-25 text-center" value="5+">
 				<app-control-messages [control]="f['sap_experience']"></app-control-messages>
+				<small *ngIf="sapExpError" class="text-danger">SAP is not greater than Total Experience</small>
 			</div>
 		</div>
 		<div class="col-lg-4 col-md-6">
