Europe bug Fixing and the popup shown

--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -15,9 +15,9 @@
 							<!-- <div  *ngIf="checkStatus(0)" class="alert alert-find alert-dismissible " role="alert">
 								<a style="text-transform: capitalize;" (click)="statusChange('0',$event)" > Closed Jobs ({{checkStatusCount(0)}})</a>
 							</div> -->
-							<div  *ngIf="checkStatus(98)" class="alert alert-find alert-dismissible " role="alert">
+							<!-- <div  *ngIf="checkStatus(98)" class="alert alert-find alert-dismissible " role="alert">
 								<a style="text-transform: capitalize;" (click)="statusChange('98',$event)" > Paused Jobs ({{checkStatusCount(98)}})</a>
-							</div>
+							</div> -->
 						</div>
 					</div> 
 				</div>
