--- a/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
+++ b/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
@@ -19,7 +19,10 @@
 							<ng-container *ngFor="let item of appliedJobs; let j = index">
 								<tr >
 									<td>
-										<a [routerLink]="[ '/user/candidate-job-view/details' ]" [queryParams]="{id:item?.job_posting?.id,path:'applied' }"  class="text-capitalize" href="javacript:;">
+										<a   *ngIf="item?.job_posting?.status != 3 " [routerLink]="[ '/user/candidate-job-view/details' ]" [queryParams]="{id:item?.job_posting?.id,path:'applied' }"  class="text-capitalize" href="javacript:;">
+											{{item?.job_posting?.title}}
+										</a>
+										<a (click)="openPopupView()" *ngIf="item?.job_posting?.status ==3 " class="text-capitalize" href="javacript:;">
 											{{item?.job_posting?.title}}
 										</a>
 									</td>
@@ -122,7 +125,7 @@
 																	<p>{{items?.comments}}</p>
 																</div>
 															</li>
-															<li class="rejected" *ngIf="items?.id == '98' ||items?.id == '3'||items?.id == '5' || items?.id == '6'|| items?.id == '4' " >
+															<li class="rejected" *ngIf="items?.id == '98' ||items?.id == '5' || items?.id == '6'|| items?.id == '4' " >
 																<div class="date">
 																	<h5 class="">{{items?.date | date: 'longDate' }}</h5>
 																</div>
@@ -172,4 +175,17 @@
 			</div>
 		</div>
 	</div>
+	<ng-template *ngIf="toggleMatchesModal" #matchesModal let-modal let-d="dismiss">
+		<div class="modal-content">
+			<div class="modal-body text-center">
+				<!-- <h1 class="text-danger mx-auto pt-4"><i class="far fa-check-circle"></i></h1> -->
+				<h6 class="mt-3" style="font-size: 20px;">This job is not available anymore</h6>
+			</div>
+			<div class="modal-footer">
+				<div class=" mx-auto">
+					<button type="button" class="btn btn-theme-blue" style="margin-right:10px;" (click)="closeMatches()"  data-dismiss="modal">Ok</button>
+				</div>
+			</div>
+		</div>	
+	</ng-template>
 </section>
