--- a/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
@@ -2,7 +2,7 @@
 	<div class="col-lg-12">
 		<div class="accordion mt-3 ">
 			<div class="pj-titler "  *ngIf="required">
-				<h6 class="mb-0" type="button">
+				<h6 class="mb-0" >
 					Required Skills
 				 </h6>
 			</div>
@@ -327,7 +327,7 @@
 			</div>
 		<div class="accordion" *ngIf="desired">
 			<div class="pj-titler m-b-1" >
-				<h6 class="mb-0" type="button">
+				<h6 class="mb-0" >
 					{{"dashboard.desiredSkills" | translate }}
 				 </h6>
 			</div>
@@ -654,7 +654,7 @@
 		</div>
 		<div class="accordion" *ngIf="nice">
 			<div class="pj-titler m-b-1"  >
-				<h6 class="mb-0" type="button">
+				<h6 class="mb-0" >
 					{{"postJob.niceToHave" | translate }}
 				 </h6>
 			</div>
@@ -981,7 +981,7 @@
 		</div>
 		<div class="accordion"  *ngIf="optional">
 			<div class="pj-titler m-b-1"  >
-				<h6 class="mb-0" type="button">
+				<h6 class="mb-0" >
 					{{"dashboard.otherPreferences" | translate }}
 				 </h6>
 			</div>
@@ -1282,7 +1282,7 @@
 		
 		<div class="accordion" *ngIf="IsShown && !isHideData">
 			<div class="pj-titler m-b-1" >
-				<h6 class="mb-0" type="button">
+				<h6 class="mb-0" >
 					{{"postJob.perksBenfits" | translate}}
 				 </h6>
 			</div>
