--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
@@ -334,7 +334,7 @@
 			</div> -->
 		</div>
 		<div class="accordion "  [ngClass]="isMultipleMatches ? ' mt-3' : ' mt-3'" *ngIf="desired">
-			<div [ngClass]="isMultipleMatches ? 'pj-titles-0' : 'pj-titles'" ><h6 type="button" class="mb-0"></h6></div>
+			<div [ngClass]="isMultipleMatches ? 'pj-titles-0' : 'pj-titles'" ><h6  class="mb-0"></h6></div>
 			<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience=='1'">
 				<div class="row">
 					<div class="col-lg-4 caption">
@@ -657,7 +657,7 @@
 			</div>
 		</div>
 		<div class="accordion  " [ngClass]="isMultipleMatches ? ' mt-3' : ' mt-3'" *ngIf="nice">
-			<div [ngClass]="isMultipleMatches ? 'pj-titles-0' : 'pj-titles'"><h6 type="button" class="mb-0"></h6></div>
+			<div [ngClass]="isMultipleMatches ? 'pj-titles-0' : 'pj-titles'"><h6  class="mb-0"></h6></div>
 			<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience=='2'">
 				<div class="row">
 					<div class="col-lg-4 caption">
@@ -977,7 +977,7 @@
 			</div>
 		</div>
 		<div class="accordion   "  [ngClass]="isMultipleMatches ? ' mt-3' : ' mt-3'" *ngIf="optional">
-			<div [ngClass]="isMultipleMatches ? 'pj-titles-0' : 'pj-titles'"><h6 type="button" class="mb-0"></h6></div>
+			<div [ngClass]="isMultipleMatches ? 'pj-titles-0' : 'pj-titles'"><h6  class="mb-0"></h6></div>
 			<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience==''">
 				<div class="row">
 					<div class="col-lg-4 caption">
