--- a/frontend/src/app/shared/component/contact-card/contact-card.component.html
+++ b/frontend/src/app/shared/component/contact-card/contact-card.component.html
@@ -127,7 +127,7 @@
       </div>
       <div class="col-lg-3 text-right" style="padding:0px;" [ngClass]="(isMultipleMatches === true)?'none-data':'col-lg-3'">
 			
-        <span class=" profile-btn" *ngIf="!isMultipleMatches" >
+        <span class=" profile-btn" *ngIf="!isMultipleMatches" style="display: inline-block;">
           <a *ngIf="!isUploadShow || selectedCover?.file"
           [class.disabled]="!selectedCover?.file"
           (click)="selectedCover?.file && onToggleCoverForm(true, (userInfo?.meta?.doc_resume?.path + '/' + userInfo?.meta?.doc_resume?.folder + '/' + selectedCover?.file))" class="btn btn-outline-orange  btn-sm" href="javascript:;">
@@ -138,7 +138,7 @@
             <i class="fas fa-file-alt"></i> Add cover
           </a>
         </span>
-        <span *ngIf="isResume" class="profile-btn">
+        <span *ngIf="isResume" class="profile-btn"  style="display: inline-block;">
           <a *ngIf="!isUploadShowResume || selectedResume?.file" style="margin-top: .25rem;"
           [class.disabled]="!selectedResume?.file"
           (click)="selectedResume?.file && onToggleResumeForm(true, (userInfo?.meta?.doc_resume?.path + '/' + userInfo?.meta?.doc_resume?.folder + '/' + selectedResume?.file))" class="btn btn-outline-blue btn-sm" href="javascript:;">
@@ -149,9 +149,9 @@
             <i class="fas fa-file-alt"></i> Add Resume
           </a>
         </span>
-		<a *ngIf="!isMail && isMatchesView " (click)="onTabChange()" style="margin-top: .25rem;" class="btn btn-outline-green btn-sm profile-btn" href="javascript:;" title="Edit"><i
+		<a *ngIf="!isMail && isMatchesView " (click)="onTabChange()" style="margin-top: .25rem;display:inline-block;" class="btn btn-outline-green btn-sm profile-btn" href="javascript:;" title="Edit"><i
             class="fas fa-tasks" ></i> Matches </a>
-        <span  *ngIf="isMail && jobInfo?.id  && jobInfo['status'] == 1 ">
+        <span  *ngIf="isMail && jobInfo?.id  && jobInfo['status'] == 1 "  style="display: inline-block;">
           <a (click)="onToggleSendMail(true)"  style="margin-top: .25rem;" class="btn btn-outline-orange btn-sm profile-btn profile-btn" href="javascript:;">
           <i class="fas fa-paper-plane"></i> Send Mail</a>
         </span>
