--- a/frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.html
@@ -6,7 +6,7 @@
 	<div class="col-lg-12" >
 		<div class="accordion ">
 			<div class="pj-title "  *ngIf="!isMultipleMatches" >
-				<h6 class="mb-0" type="button">
+				<h6 class="mb-0" >
 					Required Skills
 				 </h6>
 			</div>
@@ -406,7 +406,7 @@
 		</div>
 		<div class="accordion" *ngIf="desired">
 			<div class="pj-title m-b-1" *ngIf="!isMultipleMatches" >
-				<h6 class="mb-0" type="button">
+				<h6 class="mb-0" >
 					{{"dashboard.desiredSkills" | translate }}
 				 </h6>
 			</div>
@@ -807,7 +807,7 @@
 		</div>
 		<div class="accordion" *ngIf="nice">
 			<div class="pj-title m-b-1" *ngIf="!isMultipleMatches">
-				<h6 class="mb-0" type="button">
+				<h6 class="mb-0" >
 					{{"postJob.niceToHave" | translate }}
 				 </h6>
 			</div>
@@ -1208,7 +1208,7 @@
 		</div>
 		<div class="accordion"  *ngIf="optional">
 			<div class="pj-title m-b-1" *ngIf="!isMultipleMatches" >
-				<h6 class="mb-0" type="button">
+				<h6 class="mb-0" >
 					{{"dashboard.otherPreferences" | translate }}
 				 </h6>
 			</div>
