--- a/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
@@ -500,7 +500,7 @@
 				</div>
 			</div>
 			<div class="accordion mt-3 " *ngIf="desired">
-			<div class="pj-titless m-b-1"  [ngClass]="(isMultipleMatches === true)?'padd-5':'padd-10'" ><h6 type="button" class="mb-0"></h6></div>
+			<div class="pj-titless m-b-1"  [ngClass]="(isMultipleMatches === true)?'padd-5':'padd-10'" ><h6  class="mb-0"></h6></div>
 				<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience=='1'">
 					<ul class="list-group">
 						<li class="list-group-item">
@@ -984,7 +984,7 @@
 					</div>
 				</div>
 			</div><div class="accordion mt-0 " *ngIf="nice">
-				<div class="pj-titles m-b-1"  style="padding: 10px 0px;"><h6 type="button" class="mb-0"></h6></div>
+				<div class="pj-titles m-b-1"  style="padding: 10px 0px;"><h6  class="mb-0"></h6></div>
 				<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience=='2'">
 					<ul class="list-group">
 						<li class="list-group-item">
@@ -1469,7 +1469,7 @@
 				</div>
 			</div>
 			<div class="accordion mt-2" *ngIf="optional">
-				<div class="pj-titles m-b-1"  style="padding: 10px 0px;" ><h6 type="button" class="mb-0"></h6></div>
+				<div class="pj-titles m-b-1"  style="padding: 10px 0px;" ><h6  class="mb-0"></h6></div>
 				<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience==''">
 					<ul class="list-group">
 						<li class="list-group-item">
