Dashboard bug Fixing

--- a/frontend/src/app/modules/features/user/user-chart/user-chart.component.css
+++ b/frontend/src/app/modules/features/user/user-chart/user-chart.component.css
@@ -1,4 +1,6 @@
-
+.text-sblue {
+    color: #00caff!important;
+}
 ul.statusHistory {
     list-style-type: none;
     position: relative;
@@ -103,4 +105,14 @@ ul.statusHistory .content p{
     background: red;
     color: white;
     font-size: 7px;
+}
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
