--- a/frontend/src/app/modules/features/user/user-chart/user-chart.component.html
+++ b/frontend/src/app/modules/features/user/user-chart/user-chart.component.html
@@ -5,80 +5,86 @@
 			<div class="col-lg-12">
 				<p class="mb-0 text-sblue">Hello</p>
 				<h5 class="text-blue" style="text-transform: capitalize;">{{(currentUserDetails?.first_name ? currentUserDetails?.first_name : '') + ' ' + (currentUserDetails?.last_name ? currentUserDetails?.last_name : '')}}</h5>
+				<hr class="border-bottom pb-1">
 			</div>
 		</div>
 		<div class="row mb-5">
 			
 			<div class="col-lg-4" *ngIf="showMatches">					
-				<div class="chartTitle mb-4">
+				<div class="noselect chartTitle mb-4">
 					Total No of Matches
 				</div>
-				<canvas baseChart 
+				<canvas baseChart #chart
 					[data]="doughnutChartData"
 					[labels]="doughnutChartLabels"
 					[BorderWidth]="doughnutBorderWidth"
 					[chartType]="doughnutChartType"
-					[options]="doughnutOptions"
+					[options]="doughnutOption"
 					[colors]="doughnutChartColors"
+					(chartClick)="chartClickEvent($event)"
 					>
 				  </canvas>
-				<div class="chart-center-label">{{totalMatches}}</div>
+				<div class="noselect chart-center-label">{{totalMatches}}</div>
 			</div>
 			<div class="col-lg-4" *ngIf="showApplied">					
-				<div class="chartTitle mb-4">
+				<div class="noselect chartTitle mb-4">
 					Applied Jobs
 				</div>
-				<canvas baseChart 
+				<canvas baseChart   #chart
 					[data]="doughnutChartDataApplied"
 					[labels]="doughnutChartLabelsApplied"
 					[chartType]="doughnutChartType"
 					[options]="doughnutOptions"
 					[colors]="doughnutChartColors"
+					(chartClick)="checkTotalChartApplied($event)"
 					>
 				  </canvas>
-				<div class="chart-center-label">{{totalApplied}}</div>
+				<div class="noselect chart-center-label">{{totalApplied}}</div>
 			</div>
 			<div class="col-lg-4" *ngIf="showAvailiability">				
-				<div class="chartTitle mb-4">
+				<div class="noselect chartTitle mb-4">
 					By Availability
 				</div>
-				<canvas baseChart 
+				<canvas baseChart    #chart
 					[data]="doughnutChartDataAvailability"
 					[labels]="doughnutChartLabelsAvailability"
 					[chartType]="doughnutChartType"
 					[options]="doughnutOptions"
 					[colors]="doughnutChartColors"
+					(chartClick)="checkTotalChartAvailability($event)"
 					>
 				  </canvas>
-				<div class="chart-center-label" >{{totalAvailability}}</div>
+				<div class="noselect chart-center-label"  style="left:60%;">{{totalAvailability}}</div>
 			</div>
 			<div class="col-lg-4" *ngIf="showType">					
-				<div class="chartTitle mb-4">
+				<div class="noselect chartTitle mb-4">
 					By Job Type
 				</div>
-				<canvas baseChart 
+				<canvas baseChart    #chart
 					[data]="doughnutChartDataType"
 					[labels]="doughnutChartLabelsType"
 					[chartType]="doughnutChartType"
 					[options]="doughnutOptions"
 					[colors]="doughnutChartColors"
+					(chartClick)="checkTotalChartType($event)"
 					>
 				  </canvas>
-				<div class="chart-center-label" >{{totalType}}</div>
+				<div class="noselect chart-center-label" style="left:58%;">{{totalType}}</div>
 			</div>
 			<div class="col-lg-4" *ngIf="showVisa">					
-				<div class="chartTitle mb-4">
+				<div class="noselect chartTitle mb-4">
 					Visa Sponsord Jobs
 				</div>
-				<canvas baseChart 
+				<canvas baseChart    #chart
 					[data]="doughnutChartDataVisa"
 					[labels]="doughnutChartLabelsVisa"
 					[chartType]="doughnutChartType"
 					[options]="doughnutOptions"
 					[colors]="doughnutChartColors"
+					(chartClick)="checkTotalChartVisa($event)"
 					>
 				  </canvas>
-				<div class="chart-center-label" >{{totalVisa}}</div>
+				<div class="noselect chart-center-label" >{{totalVisa}}</div>
 			</div>
 		</div>
 	</div>
